--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,5 +1,6 @@
 .footer {
-  padding: 80px 0 40px 0;
+  margin-top: 15px;
+  padding: 24px 0 40px 0;
   width: 100vw;
   background-color: var(--surface-light);
   border-top: 1px solid var(--color-border-light);
@@ -12,7 +13,7 @@
 
 .footerGrid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: var(--space-4);
   width: 100%;
 }
